# NYU_OP3_Teleop_Quest3

./: README.md
adol_op3_AR_manager/: CMakeLists.txt  package.xml
adol_op3_AR_manager/config/: OP3.robot  dxl_init_OP3.yaml  ini_pose for_AR.yaml
adol_op3_AR_manager/launch/: op3_gazebo.launch  op3_manager.launch  op3_teleop_bringup.launch
adol_op3_AR_manager/src/: op3_AR_manager.cpp
camera_test/: CMakeLists.txt  package.xml
camera_test/include/camera_test/: tcp_ip.h
camera_test/src/: main.cpp  tcp_ip.cpp
op3_AR_whole_body_ctrl_module/: CMakeLists.txt  package.xml
op3_AR_whole_body_ctrl_module/include/op3_AR_whole_body_ctrl_module/: op3_AR_whole_body_ctrl_module.h  tcp_ip.h
op3_AR_whole_body_ctrl_module/src/: op3_AR_whole_body_ctrl_module.cpp  tcp_ip.cpp
